--- a/app/src/main/res/layout/grade_cell.xml
+++ b/app/src/main/res/layout/grade_cell.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="64dp">
+    android:layout_height="match_parent"
+    android:layout_weight="0.75">
 
     <TextView
         android:id="@+id/class_name"
@@ -12,13 +13,6 @@
         android:text="TextView"
         android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.75"
-        android:text="Button" />
-
     <TextView
         android:id="@+id/grade"
         android:layout_width="wrap_content"
@@ -27,7 +21,7 @@
         android:layout_marginRight="10dp"
         android:layout_weight="0.75"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textAlignment="textEnd"
         android:textSize="18sp" />
 
-</LinearLayout>
+</TableRow>
